--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body> 
   <h1>Hello World</h1> 
   <p>This is a sample project.</p> 
+  <p>This is an introduction paragraph added to index.html.</p>
 </body> 
 </html> 
