--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <h1>Hello World</h1> 
   <p>This is a sample project.</p> 
   <p>This is an introduction paragraph added to index.html.</p>
+  <section>
+    <h2>About Me</h2>
+    <p>This is a little about me section.</p>
+  </section>
 </body> 
 </html> 
