new branch added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <title>My Project</title> 
 </head> 
 <body> 
+  <footer>Contact us at email@example.com</footer>
   <h1>Hello World</h1> 
   <p>This is a sample project.</p> 
   <p>This is an introduction paragraph added to index.html.</p>
   <section>
     <h2>About Me</h2>
     <p>This is a little about me section.</p>
+    <section id="about">
+  <h2>About Me</h2>
+  <p>This is Akshaya's portfolio site.</p>
+  <p> hi i am Akshaya</p>
+  <p>new branch</p>
+</section>
   </section>
 </body> 
 </html> 
