Add Contact Me section to index.html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
   <p>thank you</p>
 </section>
   </section>
+  <section id="contact">
+  <h2>Contact Me</h2>
+  <p>You can reach me at <a href="mailto:me@example.com">me@example.com</a></p>
+</section>
+
 </body> 
 </html> 
